# PictureProcessing

./: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/whensunset/pictureprocessing/: PictureProcessingApplication.java
app/src/main/java/com/example/whensunset/pictureprocessing/Utils/: Utils.java
app/src/main/java/com/example/whensunset/pictureprocessing/base/: BaseActivity.java  BaseSeekBarRecycleViewVM.java  Chain.java  IAIImageFetch.java  IImageUriFetch.java  ITypefaceFetch.java  MyConsumer.java  ObservableAction.java
app/src/main/java/com/example/whensunset/pictureprocessing/dataBindingUtil/: BindingAdapters.java  BindingRecyclerViewAdapter.java  BindingUtils.java  FailedAction.java  ItemDecoration.java  ItemViewArg.java  LayoutManager.java  (+1 more)
app/src/main/res/layout/: activity_main.xml  activity_main_picture_item.xml  activity_picture_processing.xml  activity_picture_processing_picture_filter_item.xml  activity_picture_processing_picture_frame_item.xml  activity_picture_processing_picture_param_menu.xml  activity_picture_processing_picture_seekbar_recycleview_menu.xml  activity_picture_processing_picture_text_item.xml  activity_picture_processing_picture_text_param_dialog.xml  activity_picture_processing_picture_transform_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
opencvlibrary/: CMakeLists.txt  build.gradle
opencvlibrary/src/main/jni/: Android.mk  Application.mk
(+57 files in other folders)
